istio/yaml/grayscale-release/external/virtual-service-test-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-ext-svc
spec:
  hosts:
    - hello.com
  http:
  - route:
    - destination:
        host: hello.com
        port: 
          number: 43990
    match:
    - headers:
        user:
          exact: test
  - route:
    - destination:
        host: hello2.com
        port: 
          number: 43991
