istio/yaml/grayscale-release/external/virtual-service-v2-10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-ext-svc
spec:
  hosts:
    - hello.com
  http:
  - route:
    - destination:
        host: hello.com
        port: 
          number: 43990
      weight: 90
    - destination:
        host: hello2.com
        port: 
          number: 43991
      weight: 10
